ACME/main/default/objects/Employee_Skill__c/Employee_Skill__c.object-meta.xml
<CustomObject>
    <label>Employee Skill</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>