ACME/main/default/objects/Employee_Skill__c/fields/Compund_Key__c.field-meta.xml
<CustomField>
    <fullName>Compund_Key__c</fullName>
    <description>To know the compound key.</description>
    <label>Compund Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>