ACME/main/default/objects/Employee_Skill__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>To know the employee name.</description>
    <label>Employee Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>