ACME/main/default/objects/Employee_Skill__c/fields/TEST_EMPLOYEE_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>TEST_EMPLOYEE_FORMULA__c</fullName>
    <formula>&quot;BHAI KA NAAM &quot; +  Employee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST EMPLOYEE FORMULA</label>
    <type>Text</type>
</CustomField>